--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
 
     "autoload": {
         "files": [
-            "helpers.php"
+            "src/helpers.php"
         ],
 
         "psr-4": {
-            "Nano7\\Database\\": ""
+            "Nano7\\Database\\": "src/"
         }
     },
 
